--- a/style/style.css
+++ b/style/style.css
@@ -2,6 +2,7 @@
 
 body {
     margin: 0px;
+    overflow:hidden;
 }
 
 html {
@@ -16,7 +17,21 @@ html {
 }
 
 .wrap-inner {
-    background-color: gray;
+    background-color: white;
+    background-color: rgba(255, 255, 255, 0.3);
+    overflow: scroll;
+    overflow-x: hidden;
+    overflow:auto;
+}
+
+.post {
+    margin: 50px 20px 50px 20px;
+}
+
+/* 텍스트 여백 설정 */
+
+.outer-wrap {
+    height: 1000;
 }
 
 .footer {
@@ -24,7 +39,7 @@ html {
     background-color: aqua;
 }
 
-@media (width >= 1000px) {
+@media (width >=1000px) {
     .outer-wrap {
         display: flex;
         flex-direction: row;
@@ -50,11 +65,13 @@ html {
 
     .wrap-inner {
         max-width: 1300px;
-        width: 70%;
+        width: 80%;
+        height: 70%;
     }
 }
-@media (width >= 500px) and (width < 1000px) {
-    
+
+@media (width >=500px) and (width < 1000px) {
+
     .title {
         width: 100%;
         height: 25%;
@@ -64,8 +81,9 @@ html {
 
     }
 }
+
 @media (width < 500px) {
-    
+
     .title {
         width: 100%;
         height: 50px;
