--- a/pages/templates/userprofile.html
+++ b/pages/templates/userprofile.html
@@ -1,57 +1,61 @@
-<div class="user-profile-box">
-    <div class="profile-upper">
-        <div class="profile-image">
-            <img src="../img/default-profile.png">
-        </div>
-        <div class="profile-title">
-            <h1>이름</h1>
-            <p>유저네임</p>
-        </div>
-    </div>
-    <div class="profile-desc">
-        <p>프로필에 대한 설명</p>
-    </div>
-</div>
+<link rel="stylesheet" type="text/css" src="../../style/userprofile.css">
 
-<div class="post-list">
-    <div class="post">
-        <div class="post-content">
-            <h1>글 제목</h1>
-            <p>간단한 글 내용  dolor amet Lorem ipsum sit dolor amet Lorem ipsum sit dolor amet Lorem ipsum sit dolor amet Lorem ipsum sit dolor amet Lorem ipsum sit dolor amet Lorem ipsum sit dolor amet Lorem ipsum sit dolor amet Lorem ipsum sit dolor amet Lorem ipsum sit dolor amet Lorem ipsum sit dolor amet Lorem ipsum sit dolor amet Lorem ipsum sit dolor amet</p>
+<div class="user-profile">
+    <div class="user-profile-box">
+        <div class="profile-upper">
+            <div class="profile-image">
+                <img src="../img/default-profile.png">
+            </div>
+            <div class="profile-title">
+                <h1>이름</h1>
+                <p>유저네임</p>
+            </div>
         </div>
-        <div class="comments">
-            <div class="comment">
-                <p><span>작성자</span> - <span>작성일자</span></p>
-                <p>내용</p>
-            </div>
-            <div class="comment">
-                <p><span>작성자</span> - <span>작성일자</span></p>
-                <p>내용</p>
-            </div>
-            <div class="comment">
-                <p><span>작성자</span> - <span>작성일자</span></p>
-                <p>내용</p>
-            </div>
+        <div class="profile-desc">
+            <p>프로필에 대한 설명</p>
         </div>
     </div>
 
-    <div class="post">
-        <div class="post-content">
-            <h1>글 제목</h1>
-            <p>간단한 글 내용  dolor amet Lorem ipsum sit dolor amet Lorem ipsum sit dolor amet Lorem ipsum sit dolor amet Lorem ipsum sit dolor amet Lorem ipsum sit dolor amet Lorem ipsum sit dolor amet Lorem ipsum sit dolor amet Lorem ipsum sit dolor amet Lorem ipsum sit dolor amet Lorem ipsum sit dolor amet Lorem ipsum sit dolor amet Lorem ipsum sit dolor amet</p>
+    <div class="post-list">
+        <div class="post">
+            <div class="post-content">
+                <h1>글 제목</h1>
+                <p>간단한 글 내용  dolor amet Lorem ipsum sit dolor amet Lorem ipsum sit dolor amet Lorem ipsum sit dolor amet Lorem ipsum sit dolor amet Lorem ipsum sit dolor amet Lorem ipsum sit dolor amet Lorem ipsum sit dolor amet Lorem ipsum sit dolor amet Lorem ipsum sit dolor amet Lorem ipsum sit dolor amet Lorem ipsum sit dolor amet Lorem ipsum sit dolor amet</p>
+            </div>
+            <div class="comments">
+                <div class="comment">
+                    <p><span>작성자</span> - <span>작성일자</span></p>
+                    <p>내용</p>
+                </div>
+                <div class="comment">
+                    <p><span>작성자</span> - <span>작성일자</span></p>
+                    <p>내용</p>
+                </div>
+                <div class="comment">
+                    <p><span>작성자</span> - <span>작성일자</span></p>
+                    <p>내용</p>
+                </div>
+            </div>
         </div>
-        <div class="comments">
-            <div class="comment">
-                <p><span>작성자</span> - <span>작성일자</span></p>
-                <p>내용</p>
+
+        <div class="post">
+            <div class="post-content">
+                <h1>글 제목</h1>
+                <p>간단한 글 내용  dolor amet Lorem ipsum sit dolor amet Lorem ipsum sit dolor amet Lorem ipsum sit dolor amet Lorem ipsum sit dolor amet Lorem ipsum sit dolor amet Lorem ipsum sit dolor amet Lorem ipsum sit dolor amet Lorem ipsum sit dolor amet Lorem ipsum sit dolor amet Lorem ipsum sit dolor amet Lorem ipsum sit dolor amet Lorem ipsum sit dolor amet</p>
             </div>
-            <div class="comment">
-                <p><span>작성자</span> - <span>작성일자</span></p>
-                <p>내용</p>
-            </div>
-            <div class="comment">
-                <p><span>작성자</span> - <span>작성일자</span></p>
-                <p>내용</p>
+            <div class="comments">
+                <div class="comment">
+                    <p><span>작성자</span> - <span>작성일자</span></p>
+                    <p>내용</p>
+                </div>
+                <div class="comment">
+                    <p><span>작성자</span> - <span>작성일자</span></p>
+                    <p>내용</p>
+                </div>
+                <div class="comment">
+                    <p><span>작성자</span> - <span>작성일자</span></p>
+                    <p>내용</p>
+                </div>
             </div>
         </div>
     </div>
