--- a/pages/templates/viewpost.html
+++ b/pages/templates/viewpost.html
@@ -1,21 +1,22 @@
+<link rel="stylesheet" type="text/css" src="../../style/viewpost.css">
 
-                <div class="post">
-                    <div class="post-content">
-                        <h1>글 제목</h1>
-                        <p>글 내용 Lorem ipsum sit dolor amet Lorem ipsum sit dolor amet Lorem ipsum sit dolor amet Lorem ipsum sit dolor amet Lorem ipsum sit dolor amet Lorem ipsum sit dolor amet Lorem ipsum sit dolor amet Lorem ipsum sit dolor amet Lorem ipsum sit dolor amet Lorem ipsum sit dolor amet Lorem ipsum sit dolor amet Lorem ipsum sit dolor amet Lorem ipsum sit dolor amet Lorem ipsum sit dolor amet Lorem ipsum sit dolor amet Lorem ipsum sit dolor amet Lorem ipsum sit dolor amet Lorem ipsum sit dolor amet Lorem ipsum sit dolor amet</p>
-                    </div>
-                    <div class="comments">
-                        <div class="comment">
-                            <p><span>작성자</span> - <span>작성일자</span></p>
-                            <p>내용</p>
-                        </div>
-                        <div class="comment">
-                            <p><span>작성자</span> - <span>작성일자</span></p>
-                            <p>내용</p>
-                        </div>
-                        <div class="comment">
-                            <p><span>작성자</span> - <span>작성일자</span></p>
-                            <p>내용</p>
-                        </div>
-                    </div>
-                </div>
+<div class="post">
+    <div class="post-content">
+        <h1>글 제목</h1>
+        <p>글 내용 Lorem ipsum sit dolor amet Lorem ipsum sit dolor amet Lorem ipsum sit dolor amet Lorem ipsum sit dolor amet Lorem ipsum sit dolor amet Lorem ipsum sit dolor amet Lorem ipsum sit dolor amet Lorem ipsum sit dolor amet Lorem ipsum sit dolor amet Lorem ipsum sit dolor amet Lorem ipsum sit dolor amet Lorem ipsum sit dolor amet Lorem ipsum sit dolor amet Lorem ipsum sit dolor amet Lorem ipsum sit dolor amet Lorem ipsum sit dolor amet Lorem ipsum sit dolor amet Lorem ipsum sit dolor amet Lorem ipsum sit dolor amet</p>
+    </div>
+    <div class="comments">
+        <div class="comment">
+            <p><span>작성자</span> - <span>작성일자</span></p>
+            <p>내용</p>
+        </div>
+        <div class="comment">
+            <p><span>작성자</span> - <span>작성일자</span></p>
+            <p>내용</p>
+        </div>
+        <div class="comment">
+            <p><span>작성자</span> - <span>작성일자</span></p>
+            <p>내용</p>
+        </div>
+    </div>
+</div>
