--- a/pages/templates/login.html
+++ b/pages/templates/login.html
@@ -1,3 +1,4 @@
+<link rel="stylesheet" type="text/css" src="../../style/login.css">
 
 <div class="site-login-box">
     <input type="email" placeholder="이메일">
