--- a/pages/templates/register.html
+++ b/pages/templates/register.html
@@ -1,3 +1,5 @@
+<link rel="stylesheet" type="text/css" src="../../style/register.css">
+
 <div class="site-register-box">
     <input type="email" placeholder="이메일">
     <input type="password" placeholder="비밀번호">
