--- a/pages/templates/writepost.html
+++ b/pages/templates/writepost.html
@@ -1,1 +1,10 @@
 <link rel="stylesheet" type="text/css" src="../../style/writepost.css">
+
+<div class="post">
+    <div class="post-content">
+        <h1>글 제목</h1>
+        <input type="text" placeholder="글 제목">
+        <input type="text" placeholder="글 내용">
+        <button>작성하기</button>
+    </div>
+</div>
