--- a/pages/templates/lostaccount.html
+++ b/pages/templates/lostaccount.html
@@ -1,1 +1,9 @@
 <link rel="stylesheet" type="text/css" src="../../style/lostaccount.css">
+
+<div class="lost-account-box">
+    <h3>계정 복구하기</h3>
+    <p>이메일로 찾기</p>
+    <input type="email">
+    <p>전화번호로 찾기</p>
+    <input type="number">
+</div>
