--- a/style/newsfeed.css
+++ b/style/newsfeed.css
@@ -1,38 +1,5 @@
-body {
-    margin: 0px;
-    overflow:hidden;
-}
-
-html {
-    margin: 0px;
-}
-
-.title {
-    margin: 0px;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-}
-
-.wrap-inner {
-    background-color: white;
-    background-color: rgba(255, 255, 255, 0.3);
-    overflow: scroll;
-    overflow-x: hidden;
-    overflow:auto;
-}
-
-.post {
+.news-feed {
     margin: 50px 20px 50px 20px;
 }
 
 /* 텍스트 여백 설정 */
-
-.outer-wrap {
-    height: 1000;
-}
-
-.footer {
-    margin: 0px;
-    background-color: aqua;
-}
