--- a/pages/templates/footer.html
+++ b/pages/templates/footer.html
@@ -1,2 +1,1 @@
-<h3>Made by INFINITY</h3>
-<p>Copyright 2022 INFINITY, All Rights Reserved.</p>
+<p> Made by INFINITY Copyright 2022 INFINITY, All Rights Reserved. </p>
