--- a/pages/templates/lostaccount.html
+++ b/pages/templates/lostaccount.html
@@ -2,6 +2,9 @@
     <h3>계정 복구하기</h3>
     <p>이메일로 찾기</p>
     <input type="email">
+    <button>찾기</button>
     <p>전화번호로 찾기</p>
     <input type="number">
+    <button>찾기</button>
+
 </div>
