이메일 , 비밀번호 id  값 설정

--- a/pages/templates/login.html
+++ b/pages/templates/login.html
@@ -1,6 +1,6 @@
 <div class="site-login-box">
-    <input type="email" placeholder="이메일">
-    <input type="password" placeholder="비밀번호">
+    <input type="email" placeholder="이메일" id="email">
+    <input type="password" placeholder="비밀번호" id="password">
     <button>로그인</button>
 </div>
 <div class="social-login-box">
