--- a/pages/templates/title.html
+++ b/pages/templates/title.html
@@ -1,4 +1,7 @@
 <div class="title-box">
-    <h1>INFINITY</h1>
-    <p>인피니티에 오신 것을 환영합니다.</p>
+    <center>
+    <img src="https://img1.daumcdn.net/thumb/R1280x0/?scode=mtistory2&fname=https%3A%2F%2Fblog.kakaocdn.net%2Fdn%2Fm3RNd%2FbtrRuV0OPUU%2F1AuohJuprY9hKbUcTIvmU1%2Fimg.png" width="150">
+    <br><br>
+    <p><h1><b>Welcome To Our Dream!</b></h1></p>
+    </center>
 </div>
