--- a/style/style.css
+++ b/style/style.css
@@ -1,15 +1,20 @@
 /* 공통사항입니다. 페이지별 수정은 각 page.css를 이용해주세요. */
-@import url('https://cdn.jsdelivr.net/npm/galmuri@latest/dist/galmuri.css');
+@font-face {
+    font-family: 'LeferiPoint-WhiteObliqueA';
+    src: url('https://cdn.jsdelivr.net/gh/projectnoonnu/noonfonts_2201-2@1.0/LeferiPoint-WhiteObliqueA.woff') format('woff');
+    font-weight: normal;
+    font-style: normal;
+}
 /* 웹 폰트 적용 */
 
 body {
     height: 100vh;
     width: 100vw;
-    background-image: url('https://k.kakaocdn.net/dn/b9u2t9/btrRyB2yqaY/zw3SsqTZcgUKKdTaXETR4K/img.jpg');
+    background-image: url('https://blog.kakaocdn.net/dn/dBv8G4/btrRzfS8u8s/WDKMwQhPNO3h62j3keRLMk/img.jpg');
     background-repeat : no-repeat;
     background-size : cover;
     margin: 0px;
-    font-family: 'https://cdn.jsdelivr.net/npm/galmuri@latest/dist/galmuri.css';
+    font-family: 'LeferiPoint-WhiteObliqueA';
 }
 
 html {
@@ -21,15 +26,14 @@ html {
     display: flex;
     align-items: center;
     justify-content: center;
+    margin: 0px 0px 0px 0px;
 }
 
 .wrap-inner {
-    background-color: rgba( 255, 255, 255, 0.2);
+    background-color: rgba(255, 255, 255, 0.2);
     overflow: scroll;
     overflow-x: hidden;
     overflow: auto;
-
-    
 }
 
 .outer-wrap {
@@ -77,7 +81,6 @@ html {
         width: 100%;
         height: 25%;
         max-height: 350px;
-        background-color: blue;
         flex-direction: row;
 
     }
@@ -88,7 +91,6 @@ html {
     .title {
         width: 100%;
         height: 50px;
-        background-color: green;
         flex-direction: row;
     }
 
