로그인 페이지 관련

--- a/pages/templates/login.html
+++ b/pages/templates/login.html
@@ -1,9 +1,9 @@
 <div class="site-login-box">
     <input type="email" placeholder="이메일" id="email">
     <input type="password" placeholder="비밀번호" id="password">
-    <button>로그인</button>
+    <button onclick="logIn()">로그인</button>
 </div>
 <div class="social-login-box">
-    <button>Google 로그인</button>
-    <button>GitHub 로그인</button>
+    <button onclick="googleLogIn()">Google 로그인</button>
+    <button onclick="gitLogIn()">GitHub 로그인</button>
 </div>
