--- a/pages/templates/login.html
+++ b/pages/templates/login.html
@@ -3,6 +3,9 @@
     <input type="password" placeholder="비밀번호" id="password">
     <button onclick="logIn()">로그인</button>
 </div>
+<div>
+    <label><input type="checkbox" id="autoLogin">자동 로그인</label>
+</div>
 <div class="social-login-box">
     <button onclick="googleLogIn()">Google 로그인</button>
     <button onclick="gitLogIn()">GitHub 로그인</button>
