post read write

--- a/pages/templates/writepost.html
+++ b/pages/templates/writepost.html
@@ -1,8 +1,8 @@
 <div class="post">
     <div class="post-content">
         <h1>글 제목</h1>
-        <input type="text" placeholder="글 제목">
-        <input type="text" placeholder="글 내용">
-        <button>작성하기</button>
+        <input type="text" id="write-post-title" placeholder="글 제목">
+        <input type="text" id="write-post-content" placeholder="글 내용">
+        <button id="write-post-button" onclick="writePost()">작성하기</button>
     </div>
 </div>
