--- a/pages/templates/writepost.html
+++ b/pages/templates/writepost.html
@@ -3,6 +3,6 @@
         <h1>글 제목</h1>
         <input type="text" id="write-post-title" placeholder="글 제목">
         <input type="text" id="write-post-content" placeholder="글 내용">
-        <button id="write-post-button" onclick="writePost()">작성하기</button>
+        <button id="write-post-button" onclick="writePost();loadNewsfeed()">작성하기</button>
     </div>
 </div>
