--- a/pages/templates/viewpost.html
+++ b/pages/templates/viewpost.html
@@ -1,7 +1,11 @@
 <div class="post">
     <div class="post-content">
-        <h1 id="view-post-title">글 제목</h1>
-        <p id="view-post-content">글 내용 Lorem ipsum sit dolor amet Lorem ipsum sit dolor amet Lorem ipsum sit dolor amet Lorem ipsum sit dolor amet Lorem ipsum sit dolor amet Lorem ipsum sit dolor amet Lorem ipsum sit dolor amet Lorem ipsum sit dolor amet Lorem ipsum sit dolor amet Lorem ipsum sit dolor amet Lorem ipsum sit dolor amet Lorem ipsum sit dolor amet Lorem ipsum sit dolor amet Lorem ipsum sit dolor amet Lorem ipsum sit dolor amet Lorem ipsum sit dolor amet Lorem ipsum sit dolor amet Lorem ipsum sit dolor amet Lorem ipsum sit dolor amet</p>
+        <h1 id="view-post-title"></h1>
+        <p id="view-post-content"></p>
+    </div>
+    <div class="post-management">
+        <button>수정</button>
+        <button>삭제</button>
     </div>
     <div class="comments">
         <div class="comment">
