--- a/pages/templates/newsfeed.html
+++ b/pages/templates/newsfeed.html
@@ -1,6 +1,6 @@
 <div class="news-feed">
 
-    <div class="post">
+    <div class="post" id="6Xrupp27DH1ZdeVDb3Ek" onclick="loadViewPost(this.id)">
         <div class="post-content">
             <h1>글 제목</h1>
             <p>간단한 글 내용  dolor amet Lorem ipsum sit dolor amet Lorem ipsum sit dolor amet Lorem ipsum sit dolor amet Lorem ipsum sit dolor amet Lorem ipsum sit dolor amet Lorem ipsum sit dolor amet Lorem ipsum sit dolor amet Lorem ipsum sit dolor amet Lorem ipsum sit dolor amet Lorem ipsum sit dolor amet Lorem ipsum sit dolor amet Lorem ipsum sit dolor amet</p>
