--- a/pages/templates/login.html
+++ b/pages/templates/login.html
@@ -7,6 +7,6 @@
     <label><input type="checkbox" id="autoLogin">자동 로그인</label>
 </div>
 <div class="social-login-box">
-    <button onclick="googleLogIn()">Google 로그인</button>
-    <button onclick="gitLogIn()">GitHub 로그인</button>
+    <button onclick="googit(event)" value="google">Google 로그인</button>
+    <button onclick="googit(event)" value="git">GitHub 로그인</button>
 </div>
