--- a/pages/templates/newsfeed.html
+++ b/pages/templates/newsfeed.html
@@ -1,66 +1,1 @@
-<div class="news-feed">
-
-    <div class="post" id="6Xrupp27DH1ZdeVDb3Ek" onclick="loadViewPost(this.id)">
-        <div class="post-content">
-            <h1>글 제목</h1>
-            <p>간단한 글 내용  dolor amet Lorem ipsum sit dolor amet Lorem ipsum sit dolor amet Lorem ipsum sit dolor amet Lorem ipsum sit dolor amet Lorem ipsum sit dolor amet Lorem ipsum sit dolor amet Lorem ipsum sit dolor amet Lorem ipsum sit dolor amet Lorem ipsum sit dolor amet Lorem ipsum sit dolor amet Lorem ipsum sit dolor amet Lorem ipsum sit dolor amet</p>
-        </div>
-        <div class="comments">
-            <div class="comment">
-                <p><span>작성자</span> - <span>작성일자</span></p>
-                <p>내용</p>
-            </div>
-            <div class="comment">
-                <p><span>작성자</span> - <span>작성일자</span></p>
-                <p>내용</p>
-            </div>
-            <div class="comment">
-                <p><span>작성자</span> - <span>작성일자</span></p>
-                <p>내용</p>
-            </div>
-        </div>
-    </div>
-
-    <div class="post">
-        <div class="post-content">
-            <h1>글 제목</h1>
-            <p>간단한 글 내용  dolor amet Lorem ipsum sit dolor amet Lorem ipsum sit dolor amet Lorem ipsum sit dolor amet Lorem ipsum sit dolor amet Lorem ipsum sit dolor amet Lorem ipsum sit dolor amet Lorem ipsum sit dolor amet Lorem ipsum sit dolor amet Lorem ipsum sit dolor amet Lorem ipsum sit dolor amet Lorem ipsum sit dolor amet Lorem ipsum sit dolor amet</p>
-        </div>
-        <div class="comments">
-            <div class="comment">
-                <p><span>작성자</span> - <span>작성일자</span></p>
-                <p>내용</p>
-            </div>
-            <div class="comment">
-                <p><span>작성자</span> - <span>작성일자</span></p>
-                <p>내용</p>
-            </div>
-            <div class="comment">
-                <p><span>작성자</span> - <span>작성일자</span></p>
-                <p>내용</p>
-            </div>
-        </div>
-    </div>
-
-    <div class="post">
-        <div class="post-content">
-            <h1>글 제목</h1>
-            <p>간단한 글 내용  dolor amet Lorem ipsum sit dolor amet Lorem ipsum sit dolor amet Lorem ipsum sit dolor amet Lorem ipsum sit dolor amet Lorem ipsum sit dolor amet Lorem ipsum sit dolor amet Lorem ipsum sit dolor amet Lorem ipsum sit dolor amet Lorem ipsum sit dolor amet Lorem ipsum sit dolor amet Lorem ipsum sit dolor amet Lorem ipsum sit dolor amet</p>
-        </div>
-        <div class="comments">
-            <div class="comment">
-                <p><span>작성자</span> - <span>작성일자</span></p>
-                <p>내용</p>
-            </div>
-            <div class="comment">
-                <p><span>작성자</span> - <span>작성일자</span></p>
-                <p>내용</p>
-            </div>
-            <div class="comment">
-                <p><span>작성자</span> - <span>작성일자</span></p>
-                <p>내용</p>
-            </div>
-        </div>
-    </div>
-
-</div>
+<div class="news-feed" id="news-feed"></div>
