--- a/pages/templates/viewpost.html
+++ b/pages/templates/viewpost.html
@@ -1,24 +1,1 @@
-<div class="post">
-    <div class="post-content">
-        <h1 id="view-post-title"></h1>
-        <p id="view-post-content"></p>
-    </div>
-    <div class="post-management">
-        <button>수정</button>
-        <button>삭제</button>
-    </div>
-    <div class="comments">
-        <div class="comment">
-            <p><span>작성자</span> - <span>작성일자</span></p>
-            <p>내용</p>
-        </div>
-        <div class="comment">
-            <p><span>작성자</span> - <span>작성일자</span></p>
-            <p>내용</p>
-        </div>
-        <div class="comment">
-            <p><span>작성자</span> - <span>작성일자</span></p>
-            <p>내용</p>
-        </div>
-    </div>
-</div>
+<div id="post-outer"></div>
