--- a/pages/templates/register.html
+++ b/pages/templates/register.html
@@ -3,5 +3,7 @@
     <input type="password" placeholder="비밀번호">
     <input type="text" placeholder="이름">
     <input type="number" placeholder="전화번호">
-    <button>회원가입</button>
+    <button >회원가입</button>  
+    <button onclick="regLoadLandingPage()" >랜딩페이지로</button>  <!-- 글쓰기로 가는 버튼 -->
 </div>
+
