--- a/pages/templates/register.html
+++ b/pages/templates/register.html
@@ -3,7 +3,7 @@
     <input type="password" id="signInPassword" placeholder="비밀번호">
     <input type="text" id="signInName" placeholder="이름">
     <input type="number" id="signInPhoneNum" placeholder="전화번호">
-    <button type="submit" onclick="regLoadLandingPage()" id="signInButton">회원가입</button>  <!-- 회원가입에서 랜딩페이지 이동입니다. --> 
+    <button type="submit" onclick="regLoadLandingPage()" id="signUpButton">회원가입</button>  <!-- 회원가입에서 랜딩페이지 이동입니다. --> 
 
 </div>
 
