--- a/style/style.css
+++ b/style/style.css
@@ -55,7 +55,7 @@ html {
 
     .title {
         width: 25%;
-        height: 100%;
+        height: 100vh;
         background-color: rgba( 0, 0, 0, 0.2);
         flex-direction: column;
     }
