--- a/pages/templates/register.html
+++ b/pages/templates/register.html
@@ -1,9 +1,42 @@
-<div class="site-register-box">
+<!-- <div class="site-register-box">
     <input type="email" placeholder="이메일">
     <input type="password" placeholder="비밀번호">
     <input type="text" placeholder="이름">
     <input type="number" placeholder="전화번호">
-    <button onclick="regLoadLandingPage()">회원가입</button>  <!-- 회원가입에서 랜딩페이지 이동입니다. --> 
+    <button onclick="regLoadLandingPage()">회원가입</button>  <!-- 회원가입에서 랜딩페이지 이동입니다. 
 
-</div>
+</div> -->
 
+<link href="//maxcdn.bootstrapcdn.com/bootstrap/4.1.1/css/bootstrap.min.css" rel="stylesheet" id="bootstrap-css">
+<script src="//maxcdn.bootstrapcdn.com/bootstrap/4.1.1/js/bootstrap.min.js"></script>
+<script src="//cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
+<!------ Include the above in your HEAD tag ---------->
+
+<form>
+  <label>
+    <p class="label-txt">ENTER YOUR EMAIL</p>
+    <input type="email" class="input">
+    <div class="line-box">
+      <div class="line"></div>
+    </div>
+  </label>
+  <br>
+
+  <label>
+    <p class="label-txt">ENTER YOUR NAME</p>
+    <input type="text" class="input">
+    <div class="line-box">
+      <div class="line"></div>
+    </div>
+  </label>
+  <br>
+
+  <label>
+    <p class="label-txt">ENTER YOUR PASSWORD</p>
+    <input type="password" class="input">
+    <div class="line-box">
+      <div class="line"></div>
+    </div>
+  </label>
+  <button class="register_button" type="submit">submit</button>
+</form>
