--- a/style/style.css
+++ b/style/style.css
@@ -70,8 +70,9 @@ html {
 
     .wrap-inner {
         max-width: 1300px;
-        width: 80%;
+        width: 50vw;
         height: 70%;
+        margin-left: 70px;
     }
 }
 
@@ -79,7 +80,7 @@ html {
 
     .title {
         width: 100%;
-        height: 25%;
+        height: 100vh;
         max-height: 350px;
         flex-direction: row;
 
@@ -90,7 +91,7 @@ html {
 
     .title {
         width: 100%;
-        height: 50px;
+        height: 100vh;
         flex-direction: row;
     }
 
