--- a/pages/templates/login.html
+++ b/pages/templates/login.html
@@ -1,4 +1,4 @@
-<br><br><center>
+<!-- <br><br><center>
 <div class="site-login-box">
     <img src="임시이미지주소" alt="" width="72" height="57">
     <h3>로그인 후 이용 가능합니다.</h3>
@@ -11,4 +11,24 @@
     <button onclick="googit(event)" value="google">Google 로그인</button>
     <button onclick="googit(event)" value="git">GitHub 로그인</button>
 </div>
-</center>
+</center> -->
+
+<form>
+    <label>
+      <p class="label-txt">ENTER YOUR EMAIL</p>
+      <input type="email" class="input">
+      <div class="line-box">
+        <div class="line"></div>
+      </div>
+    </label>
+    <br>
+
+    <label>
+      <p class="label-txt">ENTER YOUR PASSWORD</p>
+      <input type="password" class="input">
+      <div class="line-box">
+        <div class="line"></div>
+      </div>
+    </label>
+    <button class="register_button" onclick="logIn()" type="submit">submit</button>
+  </form>
