--- a/style/style.css
+++ b/style/style.css
@@ -36,9 +36,9 @@ html {
     overflow: auto;
 }
 
-.outer-wrap {
-    height: 1000;
-}
+/* .outer-wrap {
+    
+} */
 
 .footer {
     margin: 0px;
@@ -80,7 +80,7 @@ html {
 
     .title {
         width: 100%;
-        height: 100vh;
+        height: 30%;
         max-height: 350px;
         flex-direction: row;
 
@@ -88,10 +88,13 @@ html {
 }
 
 @media (width < 500px) {
+    .title-img {
+        display: none;
+    }
 
     .title {
         width: 100%;
-        height: 100vh;
+        height: 15%;
         flex-direction: row;
     }
 
