--- a/pages/templates/footer.html
+++ b/pages/templates/footer.html
@@ -1,1 +1,1 @@
-<p> Made by INFINITY Copyright 2022 INFINITY, All Rights Reserved. </p>
+<p class="footer-text">Made by INFINITY Copyright 2022 INFINITY, All Rights Reserved.</p>
