--- a/pages/templates/title.html
+++ b/pages/templates/title.html
@@ -1,7 +1,5 @@
 <div class="title-box">
-    <center>
     <img class="title-img" src="https://img1.daumcdn.net/thumb/R1280x0/?scode=mtistory2&fname=https%3A%2F%2Fblog.kakaocdn.net%2Fdn%2Fm3RNd%2FbtrRuV0OPUU%2F1AuohJuprY9hKbUcTIvmU1%2Fimg.png" width="150">
     <br><br>
-    <p><h1><b>Welcome To Our Dream!</b></h1></p>
-    </center>
+    <h1 class="title-text"><b>Welcome To Our Dream!</b></h1>
 </div>
