--- a/style/style.css
+++ b/style/style.css
@@ -8,8 +8,8 @@
 /* 웹 폰트 적용 */
 
 body {
-    height: 100vh;
-    width: 100vw;
+    /* height: 100vh;
+    width: 100vw; */
     background-image: url('https://blog.kakaocdn.net/dn/dBv8G4/btrRzfS8u8s/WDKMwQhPNO3h62j3keRLMk/img.jpg');
     background-repeat : no-repeat;
     background-size : cover;
@@ -18,6 +18,18 @@ body {
 }
 
 html {
+    margin: 0px;
+}
+
+.title-box {
+    margin: auto;
+    /* display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center; */
+}
+
+.title-text {
     margin: 0px;
 }
 
@@ -41,8 +53,14 @@ html {
 } */
 
 .footer {
-    margin: 0px;
+    margin: 0px!important;
+    padding: 20px 0px 15px;
     text-align: center;
+    background-color: gray;
+}
+
+.footer-text {
+    margin: 0px;
 }
 
 @media (width >=1000px) {
@@ -58,6 +76,7 @@ html {
         height: 100vh;
         background-color: rgba( 0, 0, 0, 0.2);
         flex-direction: column;
+        padding: 0px 30px;
     }
 
     .wrap {
@@ -83,6 +102,7 @@ html {
         height: 30%;
         max-height: 350px;
         flex-direction: row;
+        padding: 0px;
 
     }
 }
@@ -96,6 +116,11 @@ html {
         width: 100%;
         height: 15%;
         flex-direction: row;
+        padding: 0px;
+    }
+
+    .wrap-inner {
+        height: 85vh;
     }
 
     .footer {
