회원가입 기능

--- a/pages/templates/register.html
+++ b/pages/templates/register.html
@@ -15,7 +15,7 @@
 <form>
   <label>
     <p class="label-txt">ENTER YOUR EMAIL</p>
-    <input type="email" class="input">
+    <input type="email" class="input" id = "signUpEmail">
     <div class="line-box">
       <div class="line"></div>
     </div>
@@ -33,7 +33,7 @@
 
   <label>
     <p class="label-txt">ENTER YOUR PASSWORD</p>
-    <input type="password" class="input">
+    <input type="password" class="input" id="signUpPassword">
     <div class="line-box">
       <div class="line"></div>
     </div>
