--- a/pages/templates/register.html
+++ b/pages/templates/register.html
@@ -38,5 +38,5 @@
       <div class="line"></div>
     </div>
   </label>
-  <button class="register_button" onclick="registerComplete()" type="submit">submit</button>
+  <button class="register_button" onclick="registerComplete()" type="submit" id="signUpButton">submit</button>
 </form>
