--- a/pages/templates/register.html
+++ b/pages/templates/register.html
@@ -38,5 +38,5 @@
       <div class="line"></div>
     </div>
   </label>
-  <button type="submit" id="signUpButton">submit</button>
+  <button type="submit" id="registerButton" onclick="registerComplete()">submit</button>
 </form>
