--- a/pages/templates/login.html
+++ b/pages/templates/login.html
@@ -1,21 +1,21 @@
-<form>
+<form class="loginform">
     <label>
-      <p class="label-txt">ENTER YOUR EMAIL</p>
+      <p class="login-label-txt">ENTER YOUR EMAIL</p>
       <input type="email" class="input">
-      <div class="line-box">
-        <div class="line"></div>
+      <div class="login-line-box">
+        <div class="login-line"></div>
       </div>
     </label>
     <br>
 
     <label>
-      <p class="label-txt">ENTER YOUR PASSWORD</p>
+      <p class="login-label-txt">ENTER YOUR PASSWORD</p>
       <input type="password" class="input">
       <div class="line-box">
-        <div class="line"></div>
+        <div class="login-line"></div>
       </div>
     </label>
-    <button class="register_button" onclick="logIn()" type="submit">submit</button>
+    <button class="login-register_button" onclick="logIn()" type="submit">submit</button>
     <br>
     <div class="social-login-box">
       <button onclick="googit(event)" value="google">Google 로그인</button>
