자동로그인

--- a/pages/templates/login.html
+++ b/pages/templates/login.html
@@ -16,6 +16,7 @@
       </div>
     </label>
     <button class="login-register_button" onclick="logIn()" type="submit">submit</button>
+    <label><input type="checkbox" id="autoLogin">자동 로그인</label>  
     <br>
     <div class="social-login-box">
       <button onclick="googit(event)" value="google">Google 로그인</button>
