--- a/pages/templates/editpost.html
+++ b/pages/templates/editpost.html
@@ -1,5 +1,11 @@
 <div class="post">
     <div class="post-content">
         <!-- 내용은 script.js에 있습니다 -->
+        <div class="edit-post-box">
+            <h1>글 수정</h1>
+            <input type="text" id="edit-post-title" placeholder="글 제목">
+            <input type="text" id="edit-post-content" placeholder="글 내용">
+            <!-- <button id="edit-post-button" onclick="editPost('${postId}')">작성하기</button> -->
+        </div>
     </div>
 </div>
