--- a/style/login.css
+++ b/style/login.css
@@ -1,5 +1,9 @@
 .loginform {
-    margin: 0px;
+  width: 200px;
+  position: sticky;
+  top: 0; left: 0; bottom: 0; right: 0;
+  height: 10%;
+  margin: 10% auto;
 }
 
 label {
@@ -7,7 +11,7 @@ label {
     position: relative;
     margin: 40px 0px;
   }
-  .login-label-txt {
+  .label-txt {
     position: absolute;
     top: -1.6em;
     padding: 10px;
@@ -25,14 +29,14 @@ label {
     outline: none;
   }
   
-  .login-line-box {
+  .line-box {
     position: relative;
     width: 100%;
     height: 2px;
     background: #BCBCBC;
   }
   
-  .login-line {
+  .line {
     position: absolute;
     width: 0%;
     height: 2px;
@@ -51,7 +55,7 @@ label {
     top: -3em;
   }
   
-  register_button {
+  .register_button {
     display: inline-block;
     padding: 12px 24px;
     background: rgb(220,220,220);
@@ -64,8 +68,12 @@ label {
     transition: ease .3s;
   }
   
-  button:hover {
+  .button:hover {
     background: #8BC34A;
     color: #ffffff;
+  }
+
+  .social-login-box {
+    display: flex;
   }
   
