--- a/pages/templates/login.html
+++ b/pages/templates/login.html
@@ -3,22 +3,22 @@
 <script src="//cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
 <!------ Include the above in your HEAD tag ---------->
 
-<form class="loginform">
-    <label>
-        <p class="label-txt">ENTER YOUR EMAIL</p>
+<div class="loginform">
+    <div>
+    <p class="label-txt">ENTER YOUR EMAIL</p>
         <input type="email" class="input">
         <div class="line-box">
         <div class="line"></div>
         </div>
-    </label>
+    </div>
 
-    <label>
+    <div>
         <p class="label-txt">ENTER YOUR PASSWORD</p>
         <input type="password" class="input">
         <div class="line-box">
         <div class="line"></div>
         </div>
-    </label>
+    </div>
 
     <br><br>
     <button class="register_button" onclick="logIn()" type="submit">submit</button>
@@ -28,4 +28,4 @@
         <button onclick="googit(event)" value="google">Google 로그인</button>
         <button onclick="googit(event)" value="git">GitHub 로그인</button>
     </div>
-</form>
+</div>
