--- a/pages/templates/register.html
+++ b/pages/templates/register.html
@@ -3,31 +3,31 @@
 <script src="//cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
 <!------ Include the above in your HEAD tag ---------->
 
-<form>
-  <label>
-    <p class="label-txt">ENTER YOUR EMAIL</p>
-    <input type="email" class="input" id = "signUpEmail">
-    <div class="line-box">
-      <div class="line"></div>
+<div>
+    <div>
+        <p class="label-txt">ENTER YOUR EMAIL</p>
+        <input type="email" class="input" id = "signUpEmail">
+        <div class="line-box">
+        <div class="line"></div>
+        </div>
     </div>
-  </label>
-  <br>
+    <br>
 
-  <label>
-    <p class="label-txt">ENTER YOUR NAME</p>
-    <input type="text" class="input">
-    <div class="line-box">
-      <div class="line"></div>
+    <div>
+        <p class="label-txt">ENTER YOUR NAME</p>
+        <input type="text" class="input">
+        <div class="line-box">
+        <div class="line"></div>
+        </div>
     </div>
-  </label>
-  <br>
+    <br>
 
-  <label>
-    <p class="label-txt">ENTER YOUR PASSWORD</p>
-    <input type="password" class="input" id="signUpPassword">
-    <div class="line-box">
-      <div class="line"></div>
+    <div>
+        <p class="label-txt">ENTER YOUR PASSWORD</p>
+        <input type="password" class="input" id="signUpPassword">
+        <div class="line-box">
+        <div class="line"></div>
+        </div>
     </div>
-  </label>
-  <button type="submit" id="registerButton" onclick="registerComplete()">submit</button>
-</form>
+    <button type="submit" id="registerButton" onclick="registerComplete()">submit</button>
+</div>
