--- a/pages/templates/login.html
+++ b/pages/templates/login.html
@@ -1,31 +1,24 @@
-<link href="//maxcdn.bootstrapcdn.com/bootstrap/4.1.1/css/bootstrap.min.css" rel="stylesheet" id="bootstrap-css">
-<script src="//maxcdn.bootstrapcdn.com/bootstrap/4.1.1/js/bootstrap.min.js"></script>
-<script src="//cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
-<!------ Include the above in your HEAD tag ---------->
 
-<div class="loginform">
-    <div>
-    <p class="label-txt">ENTER YOUR EMAIL</p>
-        <input type="email" class="input">
-        <div class="line-box">
-        <div class="line"></div>
-        </div>
-    </div>
+    <label>
+      <p class="login-label-txt">ENTER YOUR EMAIL</p>
+      <input type="email" class="input" id ="email">
+      <div class="login-line-box">
+        <div class="login-line"></div>
+      </div>
+    </label>
+    <br>
 
-    <div>
-        <p class="label-txt">ENTER YOUR PASSWORD</p>
-        <input type="password" class="input">
-        <div class="line-box">
-        <div class="line"></div>
-        </div>
-    </div>
-
-    <br><br>
-    <button class="register_button" onclick="logIn()" type="submit">submit</button>
+    <label>
+      <p class="login-label-txt">ENTER YOUR PASSWORD</p>
+      <input type="password" class="input" id ="password">
+      <div class="line-box">
+        <div class="login-line"></div>
+      </div>
+    </label>
+    <button class="login-register_button" onclick="logIn()" type="submit">submit</button>
     <label><input type="checkbox" id="autoLogin">자동 로그인</label>  
-
+    <br>
     <div class="social-login-box">
-        <button onclick="googit(event)" value="google">Google 로그인</button>
-        <button onclick="googit(event)" value="git">GitHub 로그인</button>
-    </div>
-</div>
+      <button onclick="googit(event)" value="google">Google 로그인</button>
+      <button onclick="googit(event)" value="git">GitHub 로그인</button>
+  </div>
