--- a/pages/templates/editpost.html
+++ b/pages/templates/editpost.html
@@ -2,6 +2,7 @@
     <div class="post-content">
         <div class="edit-post-box" id="edit-post-box">
             <h1>글 수정</h1>
+            <!-- TODO 이전 글 컨텐츠 복사 -->
             <input type="text" id="edit-post-title" placeholder="글 제목">
             <input type="text" id="edit-post-content" placeholder="글 내용">
             <div id="edit-button-container"></div>
