--- a/pages/templates/login.html
+++ b/pages/templates/login.html
@@ -1,4 +1,4 @@
-
+<div class="loginbox">
     <label>
       <p class="login-label-txt">ENTER YOUR EMAIL</p>
       <input type="email" class="input" id ="email">
@@ -22,3 +22,4 @@
       <button onclick="googit(event)" value="google">Google 로그인</button>
       <button onclick="googit(event)" value="git">GitHub 로그인</button>
   </div>
+</div>
