--- a/pages/templates/register.html
+++ b/pages/templates/register.html
@@ -3,6 +3,7 @@
 <script src="//cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
 <!------ Include the above in your HEAD tag ---------->
 
+<div class="register">
 <div>
     <div>
         <p class="label-txt">ENTER YOUR EMAIL</p>
@@ -30,4 +31,5 @@
         </div>
     </div>
     <button type="submit" id="registerButton" onclick="registerComplete()">submit</button>
+</div>
 </div>
