민경님 고쳤어요

--- a/style/login.css
+++ b/style/login.css
@@ -11,8 +11,8 @@ label {
     position: relative;
     margin: 40px 0px;
   }
-  .label-txt {
-    position: absolute;
+  .login-label-txt {
+    /* position: absolute; */
     top: -1.6em;
     padding: 10px;
     font-family: sans-serif;
