--- a/pages/templates/register.html
+++ b/pages/templates/register.html
@@ -3,10 +3,10 @@
 <script src="//cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
 <!------ Include the above in your HEAD tag ---------->
 
-<div>
+<div class="register-form">
     <div>
         <p class="label-txt">ENTER YOUR EMAIL</p>
-        <input type="email" class="input" id = "signUpEmail">
+        <input type="email" class="register-input" id = "signUpEmail">
         <div class="line-box">
         <div class="line"></div>
         </div>
@@ -15,7 +15,7 @@
 
     <div>
         <p class="label-txt">ENTER YOUR NAME</p>
-        <input type="text" class="input">
+        <input type="text" class="register-input">
         <div class="line-box">
         <div class="line"></div>
         </div>
@@ -24,10 +24,10 @@
 
     <div>
         <p class="label-txt">ENTER YOUR PASSWORD</p>
-        <input type="password" class="input" id="signUpPassword">
+        <input type="password" class="register-input" id="signUpPassword">
         <div class="line-box">
         <div class="line"></div>
         </div>
     </div>
-    <button type="submit" id="registerButton" onclick="registerComplete()">submit</button>
+    <button type="submit" id="registerButton" class="register-button" onclick="registerComplete()">submit</button>
 </div>
