--- a/style/style.css
+++ b/style/style.css
@@ -11,6 +11,7 @@
     /* height: 100vh;
     width: 100vw; */
     background-image: url('https://blog.kakaocdn.net/dn/dQ5RgT/btrRK2lKcsJ/ClW5RB3GLlsgrbGt72RSVK/img.png');
+    /* background-color: white; */
     background-repeat : no-repeat;
     background-size : cover;
     margin: 0px;
