--- a/pages/templates/login.html
+++ b/pages/templates/login.html
@@ -4,7 +4,7 @@
 
 <div class="loginform">
     <div>
-    <p class="label-txt">ENTER YOUR EMAIL</p>
+    <p class="login-label-txt">ENTER YOUR EMAIL</p>
         <input type="email" class="input">
         <div class="line-box">
         <div class="line"></div>
@@ -12,7 +12,7 @@
     </div>
     
     <div>
-        <p class="label-txt">ENTER YOUR PASSWORD</p>
+        <p class="login-label-txt">ENTER YOUR PASSWORD</p>
         <input type="password" class="input">
         <div class="line-box">
         <div class="line"></div>
