--- a/pages/templates/register.html
+++ b/pages/templates/register.html
@@ -5,7 +5,7 @@
 
 <div class="register-form">
     <div>
-        <p class="label-txt">ENTER YOUR EMAIL</p>
+        <p class="register-label-txt">ENTER YOUR EMAIL</p>
         <input type="email" class="register-input" id = "signUpEmail">
         <div class="line-box">
         <div class="line"></div>
@@ -14,7 +14,7 @@
     <br>
 
     <div>
-        <p class="label-txt">ENTER YOUR NAME</p>
+        <p class="register-label-txt">ENTER YOUR NAME</p>
         <input type="text" class="register-input">
         <div class="line-box">
         <div class="line"></div>
@@ -23,7 +23,7 @@
     <br>
 
     <div>
-        <p class="label-txt">ENTER YOUR PASSWORD</p>
+        <p class="register-label-txt">ENTER YOUR PASSWORD</p>
         <input type="password" class="register-input" id="signUpPassword">
         <div class="line-box">
         <div class="line"></div>
