--- a/style/register.css
+++ b/style/register.css
@@ -12,7 +12,7 @@ label {
     margin: 40px 0px;
   }
 
-.label-txt {
+.register-label-txt {
   top: -1.6em;
   padding: 10px;
   font-family: sans-serif;
