--- a/style/style.css
+++ b/style/style.css
@@ -10,7 +10,7 @@
 .page-body {
     /* height: 100vh;
     width: 100vw; */
-    background-image: url('https://blog.kakaocdn.net/dn/dQ5RgT/btrRK2lKcsJ/ClW5RB3GLlsgrbGt72RSVK/img.png');
+    background-image: url('../img/aespa.png');
     /* background-color: white; */
     background-repeat : no-repeat;
     background-size : cover;
@@ -24,7 +24,7 @@
     left: 0;
     right: 0;
     bottom: 0;
-    background-image: url('https://blog.kakaocdn.net/dn/dQ5RgT/btrRK2lKcsJ/ClW5RB3GLlsgrbGt72RSVK/img.png');
+    background-image: url('../img/aespa.png');
     background-size: cover;
     filter: blur(4px);
     z-index: -1;
