--- a/pages/templates/login.html
+++ b/pages/templates/login.html
@@ -5,7 +5,7 @@
 <div class="loginform">
     <div>
     <p class="login-label-txt">ENTER YOUR EMAIL</p>
-        <input type="email" class="input">
+        <input type="email" id="email" class="input">
         <div class="line-box">
         <div class="line"></div>
         </div>
@@ -13,7 +13,7 @@
     
     <div>
         <p class="login-label-txt">ENTER YOUR PASSWORD</p>
-        <input type="password" class="input">
+        <input type="password" id="password" class="input">
         <div class="line-box">
         <div class="line"></div>
         </div>
